CHANGES.txt - 2008-04-30
------------------------

CHANGES IN CUPS V1.4b1

	- Added a mdns backend for discovery and printing to printers
	  that advertise themselves via DNS-SD (Bonjour)
	- The ipp, lpd, and socket backends now support DNS-SD service
	  name resolution.
	- The scheduler now uses a single shared file descriptor for
	  all DNS-SD registrations (STR #2674)
	- The ipp, lpd, and socket backends now support SNMP-based
	  page accounting and supply level monitoring (STR #1655)
	- Added support for cupsPJLDisplay attribute to control what
	  PJL commands are used to display the job information.
	- Driver information files can now be installed in
	  /Library/Printers/PPDs.drv on Mac OS X.
	- The CUPS image library now supports reading images larger
	  than 2GB.
	- The scheduler now delays writing config and state files to
	  reduce disk activity (STR #2684)
	- The CUPS-Get-Devices operation now supports the
	  exclude-schemes and timeout attributes to control which
	  backends are polled and for how long.
	- The cups-deviced helper application now runs backends in
	  parallel to get the list of devices faster.
	- Added --enable-pap configure option.
	- The default cupsd.conf file now includes an "authenticated"
	  policy which requires authentication for remote print jobs.
	- Added support for Czech and Hungarian in PPD files
	  (STR #2735, STR #2736)
	- The PPD compiler tools now support Mac OS X .strings files
	  for localization (STR #2737)
	- ppdOpen*() now default the colorspace member to PPD_CS_N
	  when no DefaultColorSpace attribute is present in the PPD
	  file.
	- The build system has been updated to support separate
	  installation of data, program, header, and library files.
	- All support libraries are now built as shared libraries
	  by default.
	- The scheduler now manages ICC color profiles on Mac OS X.
	- The network backends (ipp, lpd, socket) now support
	  SNMP-based supply and page count monitoring (STR #1655)